<resources>
    <string name="app_name">Staff MS</string>
    <string name="tagline">Secure &amp; Reliable</string>
    <string name="logo_letter">S</string>
    <string name="app_logo">Auth App Logo</string>
    <string name="app_title">Welcome Back</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="signup_message">Don\'t have an account? </string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_title">Create Account</string>
    <string name="sign_up_subtitle">Sign up to get started</string>
    <string name="Full_name">Full Name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend">  Didn\'t receive code? Resend</string>
    <string name="verify_email">Verify Your Email"</string>
    <string name="email_verify_des">Enter the 6-digit code sent to your email</string>
    <string name="hint"> 000000</string>

    <!-- FCM Notifications -->
    <string name="default_notification_channel_id">general_channel</string>
    <string name="default_notification_channel_name">General Notifications</string>
    <string name="fcm_message">FCM Message</string>













</resources>